# easybench-wasm

./: .travis.yml  Cargo.toml  Makefile  README.md  lib.rs  webdriver.json
tests/: web.rs
