[package]
name = "easybench-wasm"
version = "0.1.4"
authors = [
  "Alex Sayers <alex.sayers@gmail.com>",
  "Stefan Battiston <stefan.battiston@gmail.com>"
]
description = "A lightweight benchmarking library"
# documentation = "https://docs.rs/easybench/"
repository = "https://github.com/stefan2718/easybench-wasm"
readme = "README.md"
keywords = ["benchmark"]
license = "MIT OR Apache-2.0"

[lib]
name = "easybench_wasm"
path = "lib.rs"

[dependencies]
web-sys = { version = "0.3", features = [ "Window", "Performance" ] }

[dev-dependencies]
web-sys = { version = "0.3", features = [ "console" ] }
wasm-bindgen-test = "0.2.50"