[package]
name = "easybench-wasm"
version = "0.2.1"
authors = [
  "Alex Sayers <alex.sayers@gmail.com>",
  "Stefan Battiston <stefan.battiston@gmail.com>"
]
description = "A lightweight benchmarking library for Wasm target"
repository = "https://github.com/stefan2718/easybench-wasm"
readme = "README.md"
keywords = [ "benchmark", "profiling", "wasm", "wasm32" ]
categories = [ "development-tools::profiling", "wasm" ]
license = "MIT OR Apache-2.0"

[lib]
name = "easybench_wasm"
path = "lib.rs"

[badges]
travis-ci = { repository = "stefan2718/easybench-wasm", branch = "master" }

[dependencies]
humantime = "1.3"
web-sys = { version = "0.3", features = [ "Window", "Performance" ] }

[dev-dependencies]
web-sys = { version = "0.3", features = [ "console" ] }
wasm-bindgen-test = "0.2.50"